tests/NormalTests/paczka1/small_fuzzy/86821286.err
Error in line 1: A406 A3 54,1
Error in line 8: Bz37a A982 11,8
Error in line 13: Qhy A406 63,4
